--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <p>This is a simple HTML document.</p>
     <p>Here is a list of items:</p>
     <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
+        <li>Item.{i}</li>
+        <li>Item.{i}</li>
+        <li>Item.{i}</li>
     </ul>
 </body>
 </html>
